add satisfaction-hive-ms module