@@ -33,6 +33,10 @@ def satisfaction = new Project(
             '-Dsbt.log.noformat=true',
             '-Xmx1536M -Xss1M -XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=256m')
         sbt('sbt',
+            '\'project satisfaction-hive-ms\' clean publish',
+            '-Dsbt.log.noformat=true',
+            '-Xmx1536M -Xss1M -XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=256m')
+        sbt('sbt',
             '\'project willrogers\' package rpm:packageBin',
             '-Dsbt.log.noformat=true',
             '-Xmx1536M -Xss1M -XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=256m')
